# magemcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  USAGE.md  docker-compose.yml  pyproject.toml
deploy/: Caddyfile  nginx.conf.template
docs/: deployment.md  features.md  scenarios.md  tool-specs.md  use-cases.md
scripts/: demo.py
src/magemcp/: __init__.py  audit_context.py  auth.py  completions.py  health.py  prompts.py  resources.py  server.py
src/magemcp/connectors/: __init__.py  errors.py  graphql_client.py  magento.py  pool.py  rest_client.py
src/magemcp/models/: __init__.py  catalog.py  customer.py  inventory.py  order.py  product.py
tests/: test_admin_analytics.py  test_admin_bulk.py  test_admin_cms.py  test_admin_customer_orders.py  test_admin_invoices.py  test_admin_order_tracking.py  test_admin_products.py  test_admin_promotions.py  test_admin_quotes.py  test_admin_returns.py  test_admin_reviews.py  test_admin_search_customers.py  test_admin_search_orders.py  test_admin_shipments.py  test_admin_update_inventory.py  test_audit_log.py  test_auth.py  test_cache.py  test_cart.py  test_completions.py  test_confirmation.py  test_connection_pool.py  test_connector.py  test_dates.py  test_get_categories.py  test_get_customer.py  test_get_inventory.py  test_get_order.py  test_get_product.py  test_graphql_client.py  test_health.py  test_idempotency.py  test_initiate_return.py  test_integration.py  test_integration_order_actions.py  test_order_actions.py  test_policy.py  test_policy_page.py  test_prompts.py  test_resolve_url.py  (+7 more)
(+40 files in other folders)
